--- a/latex/siggraph2013/supplemental/index.html
+++ b/latex/siggraph2013/supplemental/index.html
@@ -6,7 +6,8 @@
         <hr />
         <h2>COLOURLovers Dataset</h2>
         <p>
-            Blah blah templates.csv, describe it a little.
+            The <a href="templates.csv" />dataset csv file</a> contains a list of the top 82 artists ordered by their most popular pattern. 
+			The columns in this file are the artist name, the pattern id, a link to the pattern preview image, the list of colors used in the pattern in hex, and the pattern template id.
         </p>
         <hr />
         <h2>Model Training</h2>
@@ -17,7 +18,8 @@
         <h2>Perceptual Evaluation</h2>
         <h4></h4>
         <p>
-            Show them a HTML that is a copy of the prompt page a user would have seen.
+            Here is the interface shown to participants in our perceptual evaluation. Participants drag their favorite and least favorite 4 patterns from the grid of suggestions to the respective answer boxes.
+			<img src="study.png" />
         </p>
         <p>
             Show them a HTML that shows all the results and their observed values.
