--- a/latex/siggraph2013/supplemental/index.html
+++ b/latex/siggraph2013/supplemental/index.html
@@ -17,8 +17,24 @@
         <p>
             The factor weights for the final learned model are given below, trained using the method described in the paper.
         </p>
+        <p>
+            <b>Unary Lightness</b> : 0.3916957890631309<br />
+<b>Unary Colorfulness</b> : 0.6072022699230435<br />
+<b>Unary Name Saliency</b> : 0.2190458199016895<br />
+<b>Unary ColorNames Conditional</b> : 0.9450151466013615<br />
+<b>Binary Perceptual Difference</b> : 1.4335314502402619<br />
+<b>Binary Chroma Difference</b> : 0.44573826463578836<br />
+<b>Binary Relative Colorfulness</b> : 0.9043698496119056<br />
+<b>Binary Relative Lightness</b> : 0.4741491895465859<br />
+<b>Binary Name Similarity</b> : 8.075933288759014E-5<br />
+<b>Group Lightness</b> : 0.5489524055385332<br />
+<b>Group Colorfulness</b> : 0.6634808102466225<br />
+<b>Group Name Saliency</b> : 0.17540703784055933<br />
+<b>Group ColorNames Conditional</b> : 1.1052226383066204<br />
+<b>ColorCompatibility</b> : 1.2229857384516578<br />
+        </p>
         <hr />
-        <h2>Perceptual Evaluation</h2>
+        <h2>Perceptual Study</h2>
         <h4></h4>
         <p>
             Here is the interface shown to participants in our perceptual evaluation. Participants drag their favorite and least favorite 4 patterns from the grid of suggestions to the respective answer boxes.
